# ruleframe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  workbook_validator_package_design_doc.md
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: README.md  audit-2026-05-30.md  computed-columns.md  deployment-plan.md  maintenance-operations.md  predicates.md  rules-format.md  testing-strategy.md  type-coercion-design.md  validation-results.md  workbook_validator_package_design_doc.md
examples/: README.md
future-package-design/: jsonlogic_spike.py  sample_rules.yaml  spike_notes.md
src/ruleframe/: __init__.py  bundle.py  coercion.py  compiler.py  computed.py  dates.py  exceptions.py  operators.py  predicates.py  result.py  validation.py
tests/: conftest.py  test_bundle.py  test_coercion.py  test_compiler.py  test_computed.py  test_dates.py  test_jsonlogic_validation.py  test_predicates.py  test_validation.py
tests/fixtures/data/: arithmetic_rows.csv  computed_savings_rows.csv  date_rows.csv  group_aggregate_rows.csv  sample_data.csv  savings_flag_rows.csv  workflow_split_node_rows.csv
tests/fixtures/rules/: arithmetic_rules.yaml  computed_savings_rules.yaml  date_rules.yaml  group_aggregate_rules.yaml  sample_rules.json  sample_rules.yaml  savings_flag_rules.yaml  workflow_split_node_rules.yaml
