[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleframe"
version = "0.1.0"
description = "Declarative DataFrame validation with rule bundles and JsonLogic"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RuleFrame Contributors" }
]
keywords = ["validation", "dataframe", "rules", "jsonlogic", "excel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pandas>=2.0,<3.0",
  "PyYAML>=6.0,<7.0",
  "python-dateutil>=2.8,<3.0",
  "python-jsonlogic>=0.1.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.10,<2.0",
  "build>=1.2,<2.0",
  "twine>=5.1,<6.0",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.5,<10.0",
]
jupyter = [
  "jupyterlab>=4.0,<5.0",
  "notebook>=7.0,<8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ruleframe"
Documentation = "https://github.com/your-org/ruleframe/tree/main/docs"
Repository = "https://github.com/your-org/ruleframe"
Issues = "https://github.com/your-org/ruleframe/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "future-package-design",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
pretty = true
mypy_path = ["src"]
